# UniversalConfig

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: exports.h  uConfig.h
src/: CMakeLists.txt  uConfig.cpp
test/: CMakeLists.txt  UConfigUnitTest.cpp
